--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,11 @@ project(HPC C)
 
 set(CMAKE_C_STANDARD 11)
 
+include_directories(SYSTEM ${MPI_INCLUDE_PATH})
+find_package(MPI REQUIRED)
+
 add_executable(HPC main.c)
 
-target_link_libraries(HPC m)
+target_link_libraries(HPC PUBLIC m MPI::MPI_C)
+
+
