separating broad and narrow phase of the collision and applying openmp in checkCollisions for loop + added isUsed to circle struct

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,11 +6,8 @@ set(CMAKE_C_STANDARD 11)
 find_package(OpenGL REQUIRED)
 find_package(GLUT REQUIRED)
 find_library(GLU_LIBRARY GLU)
+find_package(OpenMP REQUIRED)
 
 add_executable(HPC main.c)
 
-target_link_libraries(HPC m)
-target_link_libraries(HPC OpenGL::GL)
-target_link_libraries(HPC GLUT::GLUT)
-target_link_libraries(HPC ${OPENGL_LIBRARIES} ${GLU_LIBRARY})
-
+target_link_libraries(HPC m OpenGL::GL GLUT::GLUT ${OPENGL_LIBRARIES} ${GLU_LIBRARY} OpenMP::OpenMP_C)
