--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,9 @@ find_package(OpenGL REQUIRED)
 find_package(GLUT REQUIRED)
 find_library(GLU_LIBRARY GLU)
 find_package(OpenMP REQUIRED)
+find_package(MPI REQUIRED)
+include_directories(${MPI_INCLUDE_PATH})
 
 add_executable(HPC main.c)
 
-target_link_libraries(HPC m OpenGL::GL GLUT::GLUT ${OPENGL_LIBRARIES} ${GLU_LIBRARY} OpenMP::OpenMP_C)
+target_link_libraries(HPC m OpenGL::GL GLUT::GLUT ${OPENGL_LIBRARIES} ${GLU_LIBRARY} OpenMP::OpenMP_C MPI::MPI_C)
