--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,10 @@ project(HPC C)
 
 set(CMAKE_C_STANDARD 11)
 
+set(Scorep_INCLUDE_DIRS "/opt/sw/rev/21.12/haswell/gcc-9.3.0/scorep-7.0-5z46kv/include")
+set(Scorep_LIBRARIES "/opt/sw/rev/21.12/haswell/gcc-9.3.0/scorep-7.0-5z46kv/lib")
+include_directories(${Scorep_INCLUDE_DIRS})
+
 find_package(Scorep OPTIONAL_COMPONENTS)
 
 if(Scorep_FOUND)
@@ -19,4 +23,4 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fopenmp")
 
 add_executable(HPC main.c)
 
-target_link_libraries(HPC m OpenMP::OpenMP_C MPI::MPI_C)
+target_link_libraries(HPC m OpenMP::OpenMP_C MPI::MPI_C ${Scorep_LIBRARIES})
