--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,10 +3,6 @@ project(HPC C)
 
 set(CMAKE_C_STANDARD 11)
 
-find_package(VT REQUIRED)
-include_directories(${VT_INCLUDE_DIRS})
-add_definitions(${VT_COMPILE_FLAGS})
-
 find_package(OpenMP REQUIRED)
 find_package(MPI REQUIRED)
 include_directories(${MPI_INCLUDE_PATH})
@@ -14,4 +10,4 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fopenmp")
 
 add_executable(HPC main.c)
 
-target_link_libraries(HPC m OpenMP::OpenMP_C MPI::MPI_C ${VT_LIBRARIES})
+target_link_libraries(HPC m OpenMP::OpenMP_C MPI::MPI_C)
