--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,9 +8,10 @@ find_package(GLUT REQUIRED)
 find_library(GLU_LIBRARY GLU)
 find_package(OpenMP REQUIRED)
 find_package(MPI REQUIRED)
+find_package(Threads REQUIRED)
 include_directories(${MPI_INCLUDE_PATH})
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fopenmp")
 
 add_executable(HPC main.c)
 
-target_link_libraries(HPC m OpenGL::GL GLUT::GLUT ${OPENGL_LIBRARIES} ${GLU_LIBRARY} OpenMP::OpenMP_C MPI::MPI_C)
+target_link_libraries(HPC m OpenGL::GL GLUT::GLUT ${OPENGL_LIBRARIES} ${GLU_LIBRARY} ${CMAKE_THREAD_LIBS_INIT} OpenMP::OpenMP_C MPI::MPI_C)
