Added hashset file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,6 @@ find_package(Threads REQUIRED)
 include_directories(${MPI_INCLUDE_PATH})
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fopenmp")
 
-add_executable(HPC main.c)
+add_executable(HPC main.c hashset.c)
 
 target_link_libraries(HPC m OpenGL::GL GLUT::GLUT ${OPENGL_LIBRARIES} ${GLU_LIBRARY} ${CMAKE_THREAD_LIBS_INIT} OpenMP::OpenMP_C MPI::MPI_C)
